--- a/index.html
+++ b/index.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>Kochlessia
+    link rel="stylesheet"
+</h1>
+<p>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</p>
+<div id="wrapper">
+    <header>einfache Kochrezepte mit Kochlessia finden</header>
+    <section></section>
+    <aside></aside>
+    <footer></footer>
+</div>
 </body>
 </html>
