--- a/index.html
+++ b/index.html
@@ -9,6 +9,13 @@
     <section></section>
     <aside></aside>
     <footer></footer>
+    <body images="background-image:url(images/the-empty-restaurant.jpg)">
 </div>
+<a href="http://bbieri.ch"></a>
+<body bgcolor=ffff70>
+    
 </body>
+<style>
+body(
+    background-color: </style>
 </html>
