--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <body images="background-image:url(images/the-empty-restaurant.jpg)">
 </div>
 <a href="http://bbieri.ch"></a>
-<body bgcolor=ffff70>
-    
+<body bgcolor=#CEF6EC>
+
 </body>
 <style>
 body(
