--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Kochlessia
-</h1>
-<p>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</p>
+<h1>Kochlessia</h1>
+<h3>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</h3>
 <div id="wrapper">
     <header>einfache Kochrezepte mit Kochlessia finden</header>
     <section></section>
@@ -11,8 +10,17 @@
     <footer></footer>
     <body images="background-image:url(images/the-empty-restaurant.jpg)">
 </div>
-<a href="http://bbieri.ch"></a>
-<body bgcolor=#CEF6EC>
+<p> Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von
+    <a href="> Milchprodukten </a> informieren möchten.
+
+<p>
+    <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
+       title="Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten">Mozilla Webseite</a>.
+    </p>
+<p>
+    <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> Dokumentation zu Fleisch- und Milchproduktekonsum</a> 
+</p>
+<body bgcolor=#FAFAFA>
 
 </body>
 <style>
