--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <p>
     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
-       title="Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten">Mozilla Webseite</a>.
+       title="Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten"> klicken sie hier</a>.
     </p>
 <p>
     <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> Dokumentation zu Fleisch- und Milchproduktekonsum</a> 
