--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
        title="Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten"> klicken sie hier</a>.
     </p>
-<p>
-    <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> Dokumentation zu Fleisch- und Milchproduktekonsum</a> 
+<p> Wenn sie 
+    <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> hier </a> klicken kommen Sie zu einem Video zum Themy Fleisch und Milchproduktekonsum
 </p>
 <body bgcolor=#FAFAFA>
 
