--- a/index.html
+++ b/index.html
@@ -1,62 +1,23 @@
 <!DOCTYPE html>
 <html>
-<body>
-    <meta charset="utf-8">
-    <title>Fundamental text styling</title>
-    <style>
-      html {
-        font-size: 14px;
-      }
-
-      h1 {
-        font-size: 5rem;
-        text-transform: capitalize;
-        text-shadow: 1px 1px 1px rgb(142, 191, 206),
-                     2px 2px 1px rgb(142, 191, 206);
-        text-align: center;
-        letter-spacing: 2px;
-      }
-
-      h1 + p + h2 + h3 {
-        font-weight: bold;
-      }
-
-      p::first-line {
-        letter-spacing: 1px;
-        word-spacing: 4px;
-      }
-
-      p {
-        font-size: 1rem;
-        color: black;
-        font-family: Georgia, 'Times New Roman', Times, serif, Arial, sans-serif;
-        line-height: 1.4;
-        letter-spacing: 2px;
-      }
-      h3 {
-        front-size: 1rem;
-        color:steelblue;
-        font-family:Verdana, Geneva, Tahoma, sans-serif
-        letter-spacing: 2px;
-      }
-    </style>
-<h1> <center> Kochlessia </center> </h1>
-<h3>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</h3>
-<div id="wrapper">
-    <section></section>
-    <aside></aside>
-    <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
-    <body images="background-image:url(images/the-empty-restaurant.jpg)">
-</div>
-<p> Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten 
-    <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
-       title="Risiken und Nebenwirkungen von Milchprodukten"> klicken Sie hier</a>.
-    </p>
-<p> Wenn sie 
-    <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier  </a>  klicken kommen Sie zu einem Video zum Themy Fleisch und Milchproduktekonsum
-</p>
-<body bgcolor=#FAFAFA>
-    <img src="restaurant.jpg>
-</body>
-<style>
+  <body>
+      <meta charset="utf-8">
+      <title>Fundamental text styling</title>
+  <h1> <center> Kochlessia </center> </h1>
+  <h3>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</h3>
+  <div id="wrapper">
+      <section></section>
+      <aside></aside>
+      <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
+      <body images="background-image:url(images/the-empty-restaurant.jpg)">
+  </div>
+  <p> Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
+        title="Risiken und Nebenwirkungen von Milchprodukten">klicken Sie hier</a>.
+      </p>
+  <p> Wenn sie 
+      <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier klicken </a>  
+  kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum 
+  </p>
+      <img src="restaurant.jpg" alt="restaurant" height="900" width="1200">
+  </body>
 </html>
