--- a/index.html
+++ b/index.html
@@ -1,23 +1,28 @@
 <!DOCTYPE html>
 <html>
+  <head>
+        <meta charset="utf-8"> <!-- Das "utf-8" steeht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
+        <title>Fundamental text styling</title>
+        <link rel="stylesheet" href="styles/styles.css">
+  </head>
   <body>
-      <meta charset="utf-8">
-      <title>Fundamental text styling</title>
-  <h1> <center> Kochlessia </center> </h1>
-  <h3>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</h3>
-  <div id="wrapper">
-      <section></section>
-      <aside></aside>
-      <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
-      <body images="background-image:url(images/the-empty-restaurant.jpg)">
-  </div>
-  <p> Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
-        title="Risiken und Nebenwirkungen von Milchprodukten">klicken Sie hier</a>.
-      </p>
-  <p> Wenn sie 
-      <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier klicken </a>  
-  kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum 
-  </p>
-      <img src="restaurant.jpg" alt="restaurant" height="900" width="1200">
+    <h1> <center> Kochlessia </center> </h1>
+    <center><img src="restaurant.jpg" alt="restaurant" height="700" width="1600"></center>
+    <h3><center>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</center></h3>
+    <div id="wrapper">
+        <section></section>
+        <aside></aside>
+  
+        <body images="background-image:url(images/the-empty-restaurant.jpg)">
+    </div>
+    <p> Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
+          title="Risiken und Nebenwirkungen von Milchprodukten">klicken Sie hier</a>.
+        </p>
+    <p> Wenn sie 
+        <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier klicken </a>  
+    kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum 
+    </p>
+      
+        <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
   </body>
 </html>
