--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
         <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier klicken </a>  
     kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum 
     </p>
-      
-        <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
+      <li><a href="https://al7h.github.io/vegane Rezepte"
+        
+      <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
   </body>
 </html>
