--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier klicken </a>  
     kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum 
     </p>
-      <li><a href="https://al7h.github.io/vegane Rezepte"
+      <p></p><li><a href="https://al7h.github.io/vegane Rezepte">vegane Rezepte</a>
         
       <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
   </body>
