--- a/index.html
+++ b/index.html
@@ -1,29 +1,60 @@
 <!DOCTYPE html>
 <html>
+  <header>Betrieben von Github. Kreiert von Alessia Hauri</header>
   <head>
-        <meta charset="utf-8"> <!-- Das "utf-8" steeht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
+        <meta charset="utf-8"> <!-- Das "utf-8" steht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
         <title>Fundamental text styling</title>
         <link rel="stylesheet" href="styles/styles.css">
   </head>
     <body>
         <h1> <center> Kochlessia </center> </h1>
-        <center><img src="restaurant.jpg" alt="restaurant" height="700" width="1600"></center>
+        <center><img src="Strandrestaurant.jpg" alt="Strandrestaurant" height="700" width="1600" title="1. Strandrestaurant image"></center>
         <h3><center>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</center></h3>
-        <div id="wrapper">
-            <section></section>
-            <aside></aside>
-  
-    <body images="background-image:url(images/the-empty-restaurant.jpg)">
     </div>
-    <p> Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
-          title="Risiken und Nebenwirkungen von Milchprodukten"> klicken Sie hier</a>.
-        </p>
-    <p> Wenn sie 
-        <a href="https://www.youtube.com/watch?v=Y685gY6_2vM">  hier klicken </a>  
-    kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum 
+
+    <p> <div>Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
+          title="Risiken und Nebenwirkungen von Milchprodukten"> </cite> klicken Sie hier <cite></a>. <!-- Das Div sorgt dafür, dass
+          der verlinkte Text und der normale Text nicht übereinander erscheint-->
+        </div></p>
+
+        <p></p>
+
+    <p> <div>Wenn sie 
+        <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> <cite>hier klicken</cite> </a>  
+    kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum. </div>
     </p>
-      <p></p><li><a href="https://al7h.github.io/vegane Rezepte">vegane Rezepte</a>
-        
-      <footer> Betrieben von Github. Kreiert von Alessia Hauri</footer>
+
+    <div class="grid-container">
+      <div id="Rezept">
+          <h4>Rezept</h4>
+          <table> <!--Tabelle mit Rezept für Gericht "Pite"-->
+              <thead>
+                  <tr>
+                      <th colspan="2">Pite</th>
+                  </tr>
+              </thead>
+              <tbody>
+                  <tr>
+                      <td style="background-color: rgb(146, 146, 146)">Mehl</td> <!--Tabelle 1. Zeile "Mehl" farbig-->
+                      <td>500g</td>
+                  </tr>
+              </tbody>
+              <tfoot>
+                  <tr>
+                      <td style="background-color: rgb(146, 146, 146)">Wasser</td> <!--Tabelle 2. Zeile "Wasser" farbig-->
+                    <td>1l</td>
+                  </tr>
+                </tfoot>
+          </table>
+      </div>
+  </body> 
+ 
+  <div id="Quellen">
+
+  </div>
+        <p></p>
+      <footer> 
+        <a href="https://al7h.github.io/Quellen"> Quellen </a>
+      </footer>
   </body>
 </html>
