--- a/Quellen.html
+++ b/Quellen.html
@@ -1,14 +1,22 @@
 <!DOCTYPE html>
 <html>
+  <header>Betrieben von Github. Kreiert von Alessia Hauri</header>
   <head>
         <meta charset="utf-8"> <!-- Das "utf-8" steht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
         <title>Fundamental text styling</title>
         <link rel="stylesheet" href="styles/styles.css">
   </head>
-<div>
+    <body>
+        <h1> <center> Kochlessia </center> </h1>
     <p>
+        <h2>Quellenverzeichnis</h2>
+    </p>
+<div>
+<p>
   <ol>
       <li>Hotel Abi D’Oru Porto Rotondo - Hotel 5 Stelle Sardegna. 2020. Marinella-Restaurant-Dining-Abi-Doru-Hotel-Spa-HD - Hotel Abi D’Oru Porto Rotondo - Hotel 5 Stelle Sardegna. [online] Available at: <https://www.hotelabidoru.it/de/restaurants-und-bars/marinella-restaurant/marinella-restaurant-dining-abi-doru-hotel-spa-hd-2/> [Accessed 11 March 2020].</li>
   </ol>
 </p>
 </div>
+</body>
+</html>
