--- a/index.html
+++ b/index.html
@@ -7,54 +7,63 @@
         <link rel="stylesheet" href="styles/styles.css">
   </head>
     <body>
-        <h1> <center> Kochlessia </center> </h1>
-        <center><img src="Strandrestaurant.jpg" alt="Strandrestaurant" height="700" width="1600" title="1. Strandrestaurant image"></center>
+        <h1> <center>Kochlessia </center> </h1>
+        <img src="Strandrestaurant.jpg" alt="Strandrestaurant" height="700" width="1800" title="1. Strandrestaurant image">
         <h3><center>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</center></h3>
     </div>
 
-    <p> <div>Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
+    <ul>
+      <li>
+        <p><div>Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
           title="Risiken und Nebenwirkungen von Milchprodukten"> </cite> klicken Sie hier <cite></a>. <!-- Das Div sorgt dafür, dass
           der verlinkte Text und der normale Text nicht übereinander erscheint-->
         </div></p>
-
+      </li>
         <p></p>
 
-    <p> <div>Wenn sie 
-        <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> <cite>hier klicken</cite> </a>  
-    kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum. </div>
-    </p>
-
-    <div class="grid-container">
-      <div id="Rezept">
-          <h4>Rezept</h4>
-          <table> <!--Tabelle mit Rezept für Gericht "Pite"-->
-              <thead>
-                  <tr>
-                      <th colspan="2">Pite</th>
-                  </tr>
-              </thead>
-              <tbody>
-                  <tr>
-                      <td style="background-color: rgb(146, 146, 146)">Mehl</td> <!--Tabelle 1. Zeile "Mehl" farbig-->
-                      <td>500g</td>
-                  </tr>
-              </tbody>
-              <tfoot>
-                  <tr>
-                      <td style="background-color: rgb(146, 146, 146)">Wasser</td> <!--Tabelle 2. Zeile "Wasser" farbig-->
-                    <td>1l</td>
-                  </tr>
-                </tfoot>
-          </table>
+      <li>
+        <p> <div> Wenn sie 
+            <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> <cite>hier klicken</cite> </a>  
+        kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum. </div>
+        </p>
+      </li>  
+    </ul>
+   
+      <div id="Tabelle">
+        <p><center>
+          <table><font-size="4"> <!--Schriftgrösse des Textes in der Tabelle-->
+            <tr>
+              <th><a href="https://al7h.github.io/veganeSpeisen.html">vegane Speisen</a></th> <!--linke Zelle zuoberst, das th steht dafür dass der Text in der obersten Zeile dick ist-->
+              <th><a href="https://al7h.github.io/vegetarischeSpeisen.html">vegetarische Speisen</a></th> <!--mittlere Zelle zuoberst-->
+              <th><a href="https://al7h.github.io/Salate.html">Salate</a></th> <!--rechte Zelle zuoberst-->
+            </tr>
+            <tr>
+              <td>Sonntagsbrötchen</td>
+              <td>Ravioli vom Blech</td>
+              <td>Ceasers Salad</td>
+            </tr>
+            <tr>
+              <td>Humuspasta</td>
+              <td>Frittata mit Spinat und Erbsen</td>
+              <td>Sommer Salat</td>
+            </tr>
+            <tr>
+              <td>Veganes Pad Thai</td>
+              <td>Spinat-Shakshuka mit Spätzle</td>
+              <td>Couscous-Salat</td>
+            </tr>
+          </font-size>
+        </center></p>
       </div>
-  </body> 
- 
-  <div id="Quellen">
 
-  </div>
-        <p></p>
-      <footer> 
-        <a href="https://al7h.github.io/Quellen"> Quellen </a>
-      </footer>
+      <p></p>
   </body>
+
+  <p>
+   
+    <footer>  <div>
+      <a href="https://al7h.github.io/Quellen"> Quellen </a>
+    </div>
+  </footer>
+</p> 
 </html>
