--- a/Quellen.html
+++ b/Quellen.html
@@ -15,6 +15,15 @@
 <p>
   <ol>
       <li>Hotel Abi D’Oru Porto Rotondo - Hotel 5 Stelle Sardegna. 2020. Marinella-Restaurant-Dining-Abi-Doru-Hotel-Spa-HD - Hotel Abi D’Oru Porto Rotondo - Hotel 5 Stelle Sardegna. [online] Available at: <https://www.hotelabidoru.it/de/restaurants-und-bars/marinella-restaurant/marinella-restaurant-dining-abi-doru-hotel-spa-hd-2/> [Accessed 11 March 2020].</li>
+      <li>Gutekueche.ch. 2020. Caesar-Salat Rezept. [online] Available at: <https://www.gutekueche.ch/caesar-salat-rezept-501> [Accessed 11 March 2020].</li>
+      <li>Salat, S., 2020. Sommer Salat. [online] Fooby. Available at: <https://fooby.ch/de/rezepte/13424/sommer-salat?startAuto1=0> [Accessed 11 March 2020].</li>
+      <li>geo. 2020. Rezept: Couscous-Salat. [online] Available at: <https://www.geo.de/geolino/kinderrezepte/6631-rtkl-rezept-couscous-salat> [Accessed 11 March 2020].</li>
+      <li>Tines vegane Backstube. 2020. Sonntagsbrötchen - Tines Vegane Backstube. [online] Available at: <https://www.tinesveganebackstube.de/sonntagsbroetchen/> [Accessed 11 March 2020].</li>
+      <li>Delicious Stories. 2020. Hummus Pasta Mit Getrockneten Tomaten & Rucola - Delicious Stories. [online] Available at: <https://www.delicious-stories.de/hummus-pasta-mit-getrockneten-tomaten-rucola/> [Accessed 11 March 2020].</li>
+      <li>Thai, V., 2020. Veganes Pad Thai. [online] Fooby. Available at: <https://fooby.ch/de/rezepte/17187/veganes-pad-thai?startAuto1=4> [Accessed 11 March 2020].</li>
+      <li>lecker.de. 2020. Ravioli Vom Blech Rezept | LECKER. [online] Available at: <https://www.lecker.de/ravioli-vom-blech-71682.html> [Accessed 11 March 2020].</li>
+      <li>lecker.de. 2020. Entspannte Frittata Mit Spinat Und Erbsen Rezept | LECKER. [online] Available at: <https://www.lecker.de/entspannte-frittata-mit-spinat-und-erbsen-74742.html> [Accessed 11 March 2020].</li>
+      <li>lecker.de. 2020. Spinat-Shakshuka Mit Spätzle Rezept | LECKER. [online] Available at: <https://www.lecker.de/spinat-shakshuka-mit-spaetzle-72383.html> [Accessed 11 March 2020].</li>
   </ol>
 </p>
 </div>
