--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
               <td>Ceasers Salad</td>
             </tr>
             <tr>
-              <td>Humuspasta</td>
+              <td>Hummuspasta</td>
               <td>Frittata mit Spinat und Erbsen</td>
               <td>Sommer Salat</td>
             </tr>
