--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
         <p><center>
           <table><font-size="4"> <!--Schriftgrösse des Textes in der Tabelle-->
             <tr>
-              <th><a href="https://al7h.github.io/veganeSpeisen.html">vegane Speisen</a></th> <!--linke Zelle zuoberst, das th steht dafür dass der Text in der obersten Zeile dick ist-->
-              <th><a href="https://al7h.github.io/vegetarischeSpeisen.html">vegetarische Speisen</a></th> <!--mittlere Zelle zuoberst-->
-              <th><a href="https://al7h.github.io/Salate.html">Salate</a></th> <!--rechte Zelle zuoberst-->
+              <th><a href="veganeSpeisen.html">vegane Speisen</a></th> <!--linke Zelle zuoberst, das th steht dafür dass der Text in der obersten Zeile dick ist-->
+              <th><a href="vegetarischeSpeisen.html">vegetarische Speisen</a></th> <!--mittlere Zelle zuoberst-->
+              <th><a href="Salate.html">Salate</a></th> <!--rechte Zelle zuoberst-->
             </tr>
             <tr>
               <td>Sonntagsbrötchen</td>
