--- a/index.html
+++ b/index.html
@@ -22,9 +22,10 @@
         <p></p>
 
       <li>
-        <p> <div> Wenn sie 
-            <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> <cite>hier klicken</cite> </a>  
-        kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum. </div>
+        <p> 
+          <div> Wenn sie <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> <cite>hier klicken</cite> </a>  
+                kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum. 
+          </div>
         </p>
       </li>  
     </ul>
@@ -57,13 +58,14 @@
       </div>
 
       <p></p>
-  </body>
+    </body>
 
   <p>
    
-    <footer>  <div>
+    <footer>  
+    <div>
       <a href="https://al7h.github.io/Quellen"> Quellen </a>
     </div>
-  </footer>
-</p> 
+    </footer>
+  </p> 
 </html>
