--- a/veganeSpeisen.html
+++ b/veganeSpeisen.html
@@ -9,7 +9,7 @@
             <h2>vegane Speisen</h2>
 
             <h3>Sonntagsbrötchen</h3>
-            <img src="Sonntagsbrötchen.jpg" alt="Sonntagsbrötchen" height="300" width="500" title="5. Sonntagsbrötchen">
+            <img src="Sonntagsbroetchen.jpg" alt="Sonntagsbrötchen" height="300" width="500" title="5. Sonntagsbrötchen">
              <h4>Du brauchst</h4>
              <ul>
                  <li> 500 g Mehl</li>
