--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
    
       <div id="Tabelle">
         <p><center>
-          <table><font-size="4"> <!--Schriftgrösse des Textes in der Tabelle-->
+          <table> <font size="4"><!--Schriftgrösse des Textes in der Tabelle-->
             <tr>
               <th><a href="veganeSpeisen.html">vegane Speisen</a></th> <!--linke Zelle zuoberst, das th steht dafür dass der Text in der obersten Zeile dick ist-->
               <th><a href="vegetarischeSpeisen.html">vegetarische Speisen</a></th> <!--mittlere Zelle zuoberst-->
@@ -52,20 +52,14 @@
               <td>Veganes Pad Thai</td>
               <td>Spinat-Shakshuka mit Spätzle</td>
               <td>Couscous-Salat</td>
-            </tr>
-          </font-size>
+            </font></tr>
         </center></p>
       </div>
 
       <p></p>
     </body>
 
-  <p>
-   
     <footer>  
-    <div>
       <a href="https://al7h.github.io/Quellen"> Quellen </a>
-    </div>
     </footer>
-  </p> 
 </html>
