--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </li>  
     </ul>
    
-      <div id="Tabelle">
+      <div id="Tabelle"> <!--steht dafür, dass die folgenden Informationen in einer Tabelle dargestellt werden-->
         <p><center>
           <table> <font size="4"><!--Schriftgrösse des Textes in der Tabelle-->
             <tr>
@@ -57,9 +57,11 @@
       </div>
 
       <p></p>
-    </body>
+  
 
     <footer>  
       <a href="https://al7h.github.io/Quellen"> Quellen </a>
     </footer>
+
+    </body>
 </html>
