--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <h3><center>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</center></h3>
     </div>
 
-    <ul>
+    <ul><!--das ul steht für eine Punkteauflistung-->
       <li>
         <p><div>Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
           title="Risiken und Nebenwirkungen von Milchprodukten"> </cite> klicken Sie hier <cite></a>. <!-- Das Div sorgt dafür, dass
