--- a/Salate.html
+++ b/Salate.html
@@ -37,7 +37,7 @@
 
     <h4>Zubereitung</h4>
     <p>
-        <ol>
+        <ol> <!--Das ol steht für eine nummerierte Auflistung-->
             <li>Für die Croutons das Baguette würfelig schneiden. In einer Pfanne Olivenöl und Butter erwärmen und 
                 zerdrückten Knoblauch dazurühren. Baguettewürfel darin knusprig anbraten und auf Küchenpapier abtropfen lassen.</li>
             <li>Für das Dressing Zitronensaft, Eier, Senf, Knoblauch, und Sardellenfilets in einer Küchenmaschine zerkleinern. 
