--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <header>Betrieben von Github. Kreiert von Alessia Hauri</header>
+  <header>Betrieben von Github. Kreiert von Alessia Hauri</header><!--Kopfzeile-->
   <head>
         <meta charset="utf-8"> <!-- Das "utf-8" steht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
-        <title>Fundamental text styling</title>
+        <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
   </head>
     <body>
