--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
         <meta charset="utf-8"> <!-- Das "utf-8" steht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
         <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
+ 
   </head>
-    <body>
+    <body style="background-image: url('R4.jpg')">
         <h1> <center>Kochlessia </center> </h1>
-        <img src="Strandrestaurant.jpg" alt="Strandrestaurant" height="700" width="1800" title="1. Strandrestaurant image">
         <h3><center>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</center></h3>
     </div>
 
@@ -55,13 +55,17 @@
             </font></tr>
         </center></p>
       </div>
-
+      <div class="body"></div>
       <p></p>
   
+      <div class="wrapper">
+        <div class="box2">Two</div>
+
+      </div>
+      
 
     <footer>  
       <a href="https://al7h.github.io/Quellen"> Quellen </a>
     </footer>
-
     </body>
 </html>
