--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
         <meta charset="utf-8"> <!-- Das "utf-8" steht dafür, dass das Program die ä, ö und üs richtig darstellt und nicht falsch interpretiert-->
         <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
-        <link rel="shortcut icon" type="image/x-icon" href="favicon.jpg">
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
+        <meta name="msapplication-TileColor" content="#da532c">
+        <meta name="theme-color" content="#ffffff">
 
   </head>
     <body style="background-image: url('R4.jpg')">
