--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
         
-        <link rel="shortcut icon" type="image/x-icon" href="Kochlessia_brand_usage_#1_created_by_logaster.ico">
+        <link rel="shortcut icon" type="image/x-icon" href="Kochlessia_brand_usage_#1_created_by_logaster.png">
   </head>
     <body style="background-image: url('R4.jpg')">
         <h1> <center>Kochlessia </center> </h1>
