--- a/index.html
+++ b/index.html
@@ -8,9 +8,20 @@
         
         <link rel="shortcut icon" type="image/x-icon" href="Kochlessia_brand_usage_#1_created_by_logaster.png">
   </head>
+  <style>
+  a[href^="#"]:before{
+    content:'🔝 ';
+    position: fixed;
+    bottom: 15px;
+    right: 15px;
+    font-size: smaller;
+  } 
+  </style>
+  
     <body style="background-image: url('R4.jpg')">
         <h1> <center>Kochlessia </center> </h1>
         <h3><center>Brauchst du ein passendes Rezept? Dann bist du hier auf der richtigen Seite!</center></h3>
+        <a href="#"></a>
     </div>
 
     <ul><!--das ul steht für eine Punkteauflistung-->
