--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
         <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
         
-        <link rel="shortcut icon" type="image/x-icon" href="Kochlessia_brand_usage_#1_created_by_logaster.png">
+        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="/favicon.ico" type="image/x-icon">
   </head>
   <style>
   a[href^="#"]:before{
