--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
         <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
         
-        <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-        <link rel="icon" href="/favicon.ico" type="image/x-icon">
+        <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <style>
   a[href^="#"]:before{
