--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <title>Alessia Hauri</title>
         <link rel="stylesheet" href="styles/styles.css">
         
-        <link rel="icon" href="favicon.ico" type="image/x-icon">
+        <link rel="shortcut icon" href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.uihere.com%2Ffree-cliparts%2Fsearch%3Fq%3Dhome%2BIcon%26page%3D3&psig=AOvVaw2Zw2E3Nj8YyzazARECn6Hr&ust=1588620998527000&source=images&cd=vfe&ved=0CAIQjRxqFwoTCMjdl4y5mOkCFQAAAAAdAAAAABAE">
   </head>
   <style>
   a[href^="#"]:before{
