--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   a[href^="#"]:before{
     content:'🔝 ';
     position: fixed;
-    bottom: 45px;
-    right: 45px;
-    font-size: smaller;
-  } 
+    bottom: 15px;
+    right: 15px;
+    font-size: absolute-size;
+  }
   </style>
   
     <body style="background-image: url('R4.jpg')">
