--- a/index.html
+++ b/index.html
@@ -73,7 +73,22 @@
       <p></p>
   
       <div class="wrapper">
-        <div class="box2">Two</div>
+        <div class="box2">    
+          <ul><!--das ul steht für eine Punkteauflistung-->
+          <li>
+            <p><div>Falls Sie sich gerne noch mehr mit den Risiken und Nebenwirkungen vom Konsum von Milchprodukten informieren möchten <a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC4784799/"
+              title="Risiken und Nebenwirkungen von Milchprodukten"> </cite> klicken Sie hier <cite></a>. <!-- Das Div sorgt dafür, dass
+              der verlinkte Text und der normale Text nicht übereinander erscheint-->
+            </div></p>
+          </li>
+          <li>
+            <p> 
+              <div> Wenn sie <a href="https://www.youtube.com/watch?v=Y685gY6_2vM"> <cite>hier klicken</cite> </a>  
+                    kommen Sie zu einem Video zum Thema Fleisch und Milchproduktekonsum. 
+              </div>
+            </p>
+          </li>  
+        </ul></div>
 
       </div>
       
